src/test/deca/syntax/invalid/resultats/test13_float-lex.res
'{': [@0,350:350='{',<36>,15:0]
'print': [@1,353:357='print',<17>,16:1]
'(': [@2,358:358='(',<34>,16:6]
FLOAT: [@3,359:361='1.2',<46>,16:7]
IDENT: [@4,362:364='p12',<26>,16:10]
')': [@5,365:365=')',<35>,16:13]
';': [@6,366:366=';',<39>,16:14]
'}': [@7,368:368='}',<37>,17:0]
